--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,10 @@ html, body {
   margin: 10px 0;
 }
 
+.search {
+  margin: 20px;
+}
+
 header{ 
   height: 100px;
   margin: 30px;
@@ -72,7 +76,7 @@ input[type='text'] {
   cursor: pointer;
   background-color: transparent;
   height: 300px;
-  width: 100%;
+  width: 70%;
   perspective: 1000px;
 }
 
@@ -86,7 +90,7 @@ input[type='text'] {
 .card img {
   width: 100%;
   height: 300px;
-  object-fit: cover;
+  object-fit: fill;
 }
 
 .card-desc {
