--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html, body {
+html,
+body {
   height: 100vh;
   color: rgb(65, 64, 64);
   font-family: Arial, Helvetica, sans-serif;
@@ -32,12 +33,12 @@ html, body {
   margin: 20px;
 }
 
-header{ 
+header {
   height: 100px;
   margin: 30px;
 }
 
-header h2{
+header h2 {
   font-size: 40px;
   color: rgb(129, 192, 189);
   border-bottom: 2px solid white;
@@ -56,7 +57,7 @@ header h2{
   align-items: center;
 }
 
-input[type='text'] {
+input[type="text"] {
   display: block;
   padding: 10px;
   font-size: 20px;
@@ -76,11 +77,11 @@ input[type='text'] {
   cursor: pointer;
   background-color: transparent;
   height: 300px;
-  width: 70%;
+  width: 90%;
   perspective: 1000px;
 }
 
-.card h2{ 
+.card h2 {
   font-size: 25px;
   border-bottom: 1px #fff solid;
   padding-bottom: 10px;
@@ -90,7 +91,7 @@ input[type='text'] {
 .card img {
   width: 100%;
   height: 300px;
-  object-fit: fill;
+  object-fit: cover;
 }
 
 .card-desc {
@@ -114,8 +115,8 @@ input[type='text'] {
 }
 
 .card-back {
-  background-color: rgb(92, 92, 92);
-  color: white;
+  background-image: linear-gradient(45deg, rgb(10, 216, 199), rgb(19, 49, 41));
+  color: rgb(230, 230, 230);
   padding: 20px;
   transform: rotateY(180deg);
 }
@@ -123,6 +124,54 @@ input[type='text'] {
 .card li {
   list-style: none;
   padding-bottom: 10px;
+}
+
+button {
+  display: block;
+  /* margin: 40px 0; */
+  padding: 10px 19px;
+  border: none;
+  background-image: linear-gradient(45deg, rgb(10, 216, 199), rgb(19, 49, 41));
+  color: rgb(255, 255, 255);
+  font-size: 18px;
+  border-radius: 6px;
+  outline: none;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+.btn1:hover {
+  transform: rotateY(15deg);
+  box-shadow: -15px 0 15px rgb(0, 0, 0);
+}
+
+.btn1:active {
+  transform: scale(0.8);
+}
+
+.btn2:hover {
+  transform: rotateY(-15deg);
+  box-shadow: 15px 0 15px rgb(0, 0, 0);
+}
+
+.btn2:active {
+  transform: scale(0.8);
+}
+
+.pageNumber {
+  margin: 30px;
+  /* border: 3px solid rgb(42, 99, 165); */
+  font-weight: bold;
+  background-image: linear-gradient(45deg, rgb(10, 216, 199), rgb(19, 49, 41));
+  padding: 20px;
+  border-radius: 20px;
+  color: rgb(255, 255, 255);
+}
+
+button:disabled {
+  opacity: 0.2;
+  color: black;
+  cursor: not-allowed;
 }
 
 @media (max-width: 800px) {
